Started main menu
Started the main menu with :
- Background image
- Text for button
- Background music
- When click, thunder sound and visual
- Then black fade out

--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,14 @@ Boss
 	- Reaper V
 	- Dracula X
 
+Game :
+	- Main Menu V
+		- Play
+		- Select Level
+		- Quit V
+	- Level Transition
+	- Pause
+
 Player
 	- Add knife : straight projectile V
 	- Add axe : parabolic projectile V
@@ -32,7 +40,3 @@ Musique :
 		- Attack V
 		- Hurt V
 		- Death V
-
-Menu principal
-	- Nouvelle partie
-	- Quitter 
